# Quantum-Felix

./: .gitignore  GITHUB_PAGES_SETUP.md  Gemfile  LICENSE  README.md  WEBSITE_README.md  _config.yml  cleanup.py  documentation.md  examples.md  features.md  index.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
src/felix/: __main__.py  effective_config.json  quantum_cat.py
src/quantum_felix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
