
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-felix"
version = "0.1.0"
description = "Scenario & Strategy Simulation Engine (Research Preview)"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Daniele Cangi"}]
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
quantum-cat = "felix.__main__:main"
